# pasteboard

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Pipfile  README.md  README.rst  build.py  pasteboard.m  pyproject.toml  setup.cfg  setup.py  test_fileurl.m  tests.py  tox.ini
.github/workflows/: build.yaml  check.yaml  release.yaml
.travis/: install-osx.sh
src/pasteboard/: __init__.py  __init__.pyi  pasteboard.m
test/: .gitignore  make-pbtest.sh  make-test.sh  pbtest.m  setup.py  test.m
