[tool.poetry]
name = "pasteboard"
version = "0.3.3"
description = "Pasteboard - Python interface for reading from NSPasteboard (macOS clipboard)"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/tobywf/pasteboard"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X :: Cocoa",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Objective C",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries",
]
keywords = ["macOS", "clipboard", "pasteboard"]
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.0"
hypothesis = "^6.0.0"
mypy = "^0.800"
# This version is the last to support Python 3.6...
ipython = "7.16.1"
# ...and jedi is not properly pinned
jedi = "0.17.2"

[build-system]
requires = ["poetry_core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
