[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pasteboard"
version = "0.3.3"
description = "Pasteboard - Python interface for reading from NSPasteboard (macOS clipboard)"
authors = [
    {name = "Toby Fleming", email = "tobywf@users.noreply.github.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X :: Cocoa",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Objective C",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries",
]
keywords = ["macOS", "clipboard", "pasteboard"]
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "black",
    "mypy",
    "ipython",
    "jedi",
    "pre-commit",
]

[tool.setuptools_scm]
